// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a controlled playground 1`] = `null`;

exports[`renders a playground with a supplied scope 1`] = `
<div
  className="component-documentation"
  style={Object {}}
>
  <div
    className="playground-editable unselectable"
  >
    editable-source
  </div>
  <div
    className="playground-live-editor"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "color": "#e7d2ed",
          "fontFamily": "'Source Code Pro', monospace",
          "fontSize": "1.25em",
          "overflow": "hidden",
          "padding": 0,
          "position": "relative",
          "textAlign": "left",
          "whiteSpace": "pre",
        }
      }
    >
      <textarea
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className="npm__react-simple-code-editor__textarea"
        data-gramm={false}
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        spellCheck={false}
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "WebkitTextFillColor": "transparent",
            "background": "none",
            "border": 0,
            "boxSizing": "inherit",
            "color": "inherit",
            "display": "inherit",
            "fontFamily": "inherit",
            "fontSize": "inherit",
            "fontStyle": "inherit",
            "fontVariantLigatures": "inherit",
            "fontWeight": "inherit",
            "height": "100%",
            "left": 0,
            "letterSpacing": "inherit",
            "lineHeight": "inherit",
            "margin": 0,
            "overflow": "hidden",
            "overflowWrap": "break-word",
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "position": "absolute",
            "resize": "none",
            "tabSize": "inherit",
            "textIndent": "inherit",
            "textRendering": "inherit",
            "textTransform": "inherit",
            "top": 0,
            "whiteSpace": "pre-wrap",
            "width": "100%",
            "wordBreak": "keep-all",
          }
        }
        value="<Clock />"
      />
      <pre
        aria-hidden="true"
        style={
          Object {
            "background": "none",
            "border": 0,
            "boxSizing": "inherit",
            "display": "inherit",
            "fontFamily": "inherit",
            "fontSize": "inherit",
            "fontStyle": "inherit",
            "fontVariantLigatures": "inherit",
            "fontWeight": "inherit",
            "letterSpacing": "inherit",
            "lineHeight": "inherit",
            "margin": 0,
            "overflowWrap": "break-word",
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "pointerEvents": "none",
            "position": "relative",
            "tabSize": "inherit",
            "textIndent": "inherit",
            "textRendering": "inherit",
            "textTransform": "inherit",
            "whiteSpace": "pre-wrap",
            "wordBreak": "keep-all",
          }
        }
      >
        <div
          className="token-line"
          style={
            Object {
              "backgroundColor": null,
              "color": "#e7d2ed",
            }
          }
        >
          <span
            className="token tag punctuation"
            style={
              Object {
                "color": "#f677e1",
                "opacity": "0.7",
              }
            }
          >
            &lt;
          </span>
          <span
            className="token tag class-name"
            style={
              Object {
                "color": "#f677e1",
              }
            }
          >
            Clock
          </span>
          <span
            className="token tag"
            style={
              Object {
                "color": "#f677e1",
              }
            }
          >
             
          </span>
          <span
            className="token tag punctuation"
            style={
              Object {
                "color": "#f677e1",
                "opacity": "0.7",
              }
            }
          >
            /&gt;
          </span>
        </div>
      </pre>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "
/**
 * Reset the text fill color so that placeholder is visible
 */
.npm__react-simple-code-editor__textarea:empty {
  -webkit-text-fill-color: inherit !important;
}

/**
 * Hack to apply on some CSS on IE10 and IE11
 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  /**
    * IE doesn't support '-webkit-text-fill-color'
    * So we use 'color: transparent' to make the text transparent on IE
    * Unlike other browsers, it doesn't affect caret color in IE
    */
  .npm__react-simple-code-editor__textarea {
    color: transparent !important;
  }

  .npm__react-simple-code-editor__textarea::selection {
    background-color: #accef7 !important;
    color: transparent !important;
  }
}
",
          }
        }
        type="text/css"
      />
    </div>
  </div>
  <div
    className="playground-live-preview"
    style={
      Object {
        "height": "calc(100% - 33px)",
        "overflowX": "hidden",
        "overflowY": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 33,
        "transform": "translateZ(0)",
        "width": "50%",
      }
    }
  />
  <pre
    style={
      Object {
        "background": "#F2777A",
        "color": "white",
        "fontSize": "1.1em",
        "padding": "10px",
        "position": "absolute",
        "right": 0,
        "top": 33,
        "width": "50%",
        "zIndex": "9999",
      }
    }
  >
    ReferenceError: Provider is not defined
  </pre>
</div>
`;

exports[`renders an uncontrolled playground 1`] = `
<div
  className="component-documentation"
  style={Object {}}
>
  <div
    className="playground-editable unselectable"
  >
    editable-source
  </div>
  <div
    className="playground-live-editor"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "color": "#e7d2ed",
          "fontFamily": "'Source Code Pro', monospace",
          "fontSize": "1.25em",
          "overflow": "hidden",
          "padding": 0,
          "position": "relative",
          "textAlign": "left",
          "whiteSpace": "pre",
        }
      }
    >
      <textarea
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className="npm__react-simple-code-editor__textarea"
        data-gramm={false}
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        spellCheck={false}
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "WebkitTextFillColor": "transparent",
            "background": "none",
            "border": 0,
            "boxSizing": "inherit",
            "color": "inherit",
            "display": "inherit",
            "fontFamily": "inherit",
            "fontSize": "inherit",
            "fontStyle": "inherit",
            "fontVariantLigatures": "inherit",
            "fontWeight": "inherit",
            "height": "100%",
            "left": 0,
            "letterSpacing": "inherit",
            "lineHeight": "inherit",
            "margin": 0,
            "overflow": "hidden",
            "overflowWrap": "break-word",
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "position": "absolute",
            "resize": "none",
            "tabSize": "inherit",
            "textIndent": "inherit",
            "textRendering": "inherit",
            "textTransform": "inherit",
            "top": 0,
            "whiteSpace": "pre-wrap",
            "width": "100%",
            "wordBreak": "keep-all",
          }
        }
        value="<div>Code comes here...</div>"
      />
      <pre
        aria-hidden="true"
        style={
          Object {
            "background": "none",
            "border": 0,
            "boxSizing": "inherit",
            "display": "inherit",
            "fontFamily": "inherit",
            "fontSize": "inherit",
            "fontStyle": "inherit",
            "fontVariantLigatures": "inherit",
            "fontWeight": "inherit",
            "letterSpacing": "inherit",
            "lineHeight": "inherit",
            "margin": 0,
            "overflowWrap": "break-word",
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "pointerEvents": "none",
            "position": "relative",
            "tabSize": "inherit",
            "textIndent": "inherit",
            "textRendering": "inherit",
            "textTransform": "inherit",
            "whiteSpace": "pre-wrap",
            "wordBreak": "keep-all",
          }
        }
      >
        <div
          className="token-line"
          style={
            Object {
              "backgroundColor": null,
              "color": "#e7d2ed",
            }
          }
        >
          <span
            className="token tag punctuation"
            style={
              Object {
                "color": "#f677e1",
                "opacity": "0.7",
              }
            }
          >
            &lt;
          </span>
          <span
            className="token tag"
            style={
              Object {
                "color": "#f677e1",
              }
            }
          >
            div
          </span>
          <span
            className="token tag punctuation"
            style={
              Object {
                "color": "#f677e1",
                "opacity": "0.7",
              }
            }
          >
            &gt;
          </span>
          <span
            className="token plain"
          >
            Code comes here
          </span>
          <span
            className="token operator"
            style={
              Object {
                "color": "hsl(40, 90%, 70%)",
              }
            }
          >
            ...
          </span>
          <span
            className="token tag punctuation"
            style={
              Object {
                "color": "#f677e1",
                "opacity": "0.7",
              }
            }
          >
            &lt;/
          </span>
          <span
            className="token tag"
            style={
              Object {
                "color": "#f677e1",
              }
            }
          >
            div
          </span>
          <span
            className="token tag punctuation"
            style={
              Object {
                "color": "#f677e1",
                "opacity": "0.7",
              }
            }
          >
            &gt;
          </span>
        </div>
      </pre>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "
/**
 * Reset the text fill color so that placeholder is visible
 */
.npm__react-simple-code-editor__textarea:empty {
  -webkit-text-fill-color: inherit !important;
}

/**
 * Hack to apply on some CSS on IE10 and IE11
 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  /**
    * IE doesn't support '-webkit-text-fill-color'
    * So we use 'color: transparent' to make the text transparent on IE
    * Unlike other browsers, it doesn't affect caret color in IE
    */
  .npm__react-simple-code-editor__textarea {
    color: transparent !important;
  }

  .npm__react-simple-code-editor__textarea::selection {
    background-color: #accef7 !important;
    color: transparent !important;
  }
}
",
          }
        }
        type="text/css"
      />
    </div>
  </div>
  <div
    className="playground-live-preview"
    style={
      Object {
        "height": "calc(100% - 33px)",
        "overflowX": "hidden",
        "overflowY": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 33,
        "transform": "translateZ(0)",
        "width": "50%",
      }
    }
  />
  <pre
    style={
      Object {
        "background": "#F2777A",
        "color": "white",
        "fontSize": "1.1em",
        "padding": "10px",
        "position": "absolute",
        "right": 0,
        "top": 33,
        "width": "50%",
        "zIndex": "9999",
      }
    }
  >
    ReferenceError: Provider is not defined
  </pre>
</div>
`;
